--- a/practice-8.css
+++ b/practice-8.css
@@ -1,7 +1,14 @@
 header {
     text-align: center;
+    padding-bottom: 15px;
+}
+.list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .shop {
-    display: flex;
-    
+    border: 1px dotted black;
+    padding: 5px;
+    flex-basis: 30%;
 }
